# blah2

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.all.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.all  Dockerfile_DragonOS_RPi5.txt  Doxyfile  Jenkinsfile  LICENSE  README.md  changelog.md  check_sdrplay_version.c  check_version  docker-compose.yml  repo2pdf.ignore  sdrplay-restart.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: build-blah2.yml  build-frontend.yml  docker_build.yml  release.yml
api/: Dockerfile  bistatic.js  detection.js  iqdata.js  maxhold.js  package.json  server.js  server.js.old  test_bistatic.js  test_integration.js
api/stash/: detection.js  falsetargets.js  iqdata.js  maxhold.js  timing.js
config/: README.md  config-antsdr-e200.yml  config-hackrf.yml  config-kraken.yml  config-usrp.yml  config.yml  config.yml.backup.20250911_121112  default.yml  false_targets.yml  radar4-usrp.yml  radar4.yml
config/sdr-variants/: config-hackrf.yml  config-kraken.yml  config-pluto.yml  radar4.yml
docker/: Dockerfile-kraken  Dockerfile-uhd  README.md
host/: Dockerfile  README.md  docker-compose.yml  nginx.conf  nginx.conf.bak
host/html/: error.html
html/: control.js  index.html  plot.js
html/controller/: index.html
html/display/detection/: index.html
html/display/detection/delay/: index.html
html/display/detection/delay-doppler/: index.html
html/display/detection/doppler/: index.html
html/display/falsetargets/: index.html
html/display/map/: index.html
html/display/maxhold/: index.html
html/display/spectrum/: index.html
html/display/timing/: index.html
html/js/: plot_detection.js  plot_detection_delay.js  plot_detection_doppler.js  plot_map.js  plot_spectrum.js  plot_timing.js  table_falsetargets.js
html/lib/: blah2.css
html/maxhold/: index.html  plot_maxhold.js
lib/: vcpkg.json
lib/sdrplay-3.0.7/: SDRplay_RSP_API-Linux-3.07.1.run  install_lib.sh  sdrplay_license.txt
lib/sdrplay-3.0.7/i386/: libsdrplay_api.so.3.07  sdrplay_apiService
lib/sdrplay-3.0.7/inc/: sdrplay_api.h
lib/sdrplay-3.0.7/scripts/: sdrplay.service.local  sdrplay.service.usr  sdrplayService_local  sdrplayService_usr  sdrplay_ids.txt  sdrplay_usbids.sh
lib/sdrplay-3.0.7/x86_64/: libsdrplay_api.so.3.07  sdrplay_apiService
lib/sdrplay-3.12.1/: SDRplay_RSP_API-Linux-3.12.1.run
lib/sdrplay-3.14.0/: SDRplay_RSP_API-Linux-3.14.0.run
lib/sdrplay-3.15.2/: SDRplay_RSP_API-Linux-3.15.1.run  install_lib.sh  sdrplay_license.txt
lib/sdrplay-3.15.2/amd64/: libsdrplay_api.so.3.15  sdrplay_apiService
lib/sdrplay-3.15.2/arm64/: libsdrplay_api.so.3.15  sdrplay_apiService
lib/sdrplay-3.15.2/armhf/: libsdrplay_api.so.3.15  sdrplay_apiService
lib/sdrplay-3.15.2/inc/: sdrplay_api.h  sdrplay_api_callback.h  sdrplay_api_rspDuo.h  sdrplay_api_rspDx.h
script/: blah2.bash  blah2_rspduo_restart.bash  crontab.txt  generate_node_id.sh  test_images.sh
src/: blah2.cpp
src/capture/: Capture.all.cpp  Capture.cpp  Capture.h  Source.cpp  Source.h
src/capture/hackrf/: HackRf.cpp  HackRf.h  README.md
src/capture/iqsimulator/: IqSimulator.cpp  IqSimulator.h  TgtGen.cpp  TgtGen.h
src/capture/kraken/: Kraken.cpp  Kraken.h
src/capture/pluto/: Pluto.cpp  Pluto.h
src/capture/rspduo/: README.md  RspDuo.cpp  RspDuo.h  check_define  check_sdrplay_define.c
src/capture/simulator/: Simulator.cpp  Simulator.h  Target.cpp
src/capture/usrp/: Usrp.cpp  Usrp.h
src/data/: .IqData.h.swp  Detection.cpp  Detection.h  IqData.cpp  IqData.h  Map.cpp  Map.h  Track.cpp  Track.h
src/data/meta/: Constants.h  Timing.cpp  Timing.h
src/process/ambiguity/: Ambiguity.cpp  Ambiguity.h  test_ambiguity.cpp
src/process/clutter/: WienerHopf.cpp  WienerHopf.h
src/process/detection/: Centroid.cpp  Centroid.h  CfarDetector1D.cpp  CfarDetector1D.h  Interpolate.cpp  Interpolate.h
src/process/meta/: HammingNumber.cpp  HammingNumber.h  Socket.cpp
src/process/spectrum/: SpectrumAnalyser.cpp  SpectrumAnalyser.h
src/process/tracker/: Tracker.cpp  Tracker.h
src/process/utility/: Socket.cpp  Socket.h
src/utilities/: Conversions.cpp  Conversions.h
test/: README.md  test_sdrplay  test_sdrplay.c
test/data/: README.md
test/infrastructure/: test_merge_config.py
test/unit/process/ambiguity/: TestAmbiguity.cpp
test/unit/process/meta/: TestHammingNumber.cpp
test/unit/process/tracker/: TestTracker.cpp
web/: Dockerfile
web/html/: index.html
web/html/controller/: index.html
web/html/display/detection/delay/: index.html
web/html/display/detection/delay-doppler/: index.html
web/html/display/map/: index.html
web/html/display/maxhold/: index.html
web/html/display/spectrum/: index.html
web/html/display/timing/: index.html
web/html/js/: common.js  plot_detection.js  plot_map.js  plot_spectrum.js  plot_timing.js
web/html/lib/: blah2.css
